samples/_failures_safe/1761665883_649a63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6828b0e.c: In function ‘main’:
./samples/SAFE/__tmp_c6828b0e.c:151:11: error: expected ‘;’ at end of input
  151 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_c6828b0e.c:151:5: error: expected declaration or statement at end of input
  151 |     printf
      |     ^~~~~~
